# agent_test

auto_parking/: CMakeLists.txt  PRD.md  main.cpp
auto_parking/docs/: design.md
auto_parking/include/auto_parking/: motion_controller.h  parking_scenario.h  parking_system.h  path_planner.h  perception.h  types.h  vehicle_model.h
auto_parking/src/: motion_controller.cpp  parking_scenario.cpp  parking_system.cpp  path_planner.cpp  path_planner_diagonal.cpp  path_planner_parallel.cpp  path_planner_perpendicular.cpp  perception.cpp  utils.cpp  vehicle_model.cpp
auto_parking/tests/: CMakeLists.txt  test_motion_controller.cpp  test_parking_scenario.cpp  test_parking_system.cpp  test_path_planner.cpp  test_vehicle_model.cpp
